# polars-rows-iter

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: publish.yml  rust.yml
benchmarks/: Cargo.toml
benchmarks/benches/: benchmarks.rs
polars-rows-iter/: Cargo.toml  test.rs
polars-rows-iter-derive/: Cargo.toml
polars-rows-iter-derive/src/: context.rs  field_info.rs  from_dataframe_attribute.rs  from_dataframe_row_derive.rs  gen_iter_from_column_impl.rs  impl_iter_from_column_for_type.rs  lib.rs  tuple_iterators.rs
polars-rows-iter/benches/: benchmark.rs
polars-rows-iter/examples/: column_name_transformation.rs  dynamic_column_names.rs  generics.rs  list_columns.rs  scalar_iter.rs  tuple_rows_iter.rs
polars-rows-iter/src/: column_ext.rs  dataframe_rows_iter_ext.rs  from_dataframe_row.rs  iter_from_column.rs  lib.rs  shared_test_helpers.rs
polars-rows-iter/src/iter_from_column/: iter_from_column.rs  iter_from_column_binary.rs  iter_from_column_i32.rs  iter_from_column_i64.rs  iter_from_column_primitives.rs  iter_from_column_series.rs  iter_from_column_str.rs  iter_from_column_string.rs  iter_from_column_trait.rs  iter_from_column_vec.rs  mod.rs
polars-rows-iter/src/iter_from_column/iter_from_column_chrono/: datetime.rs  naivedatetime.rs
polars-rows-iter/src/iter_from_column_raw/: iter_from_column_raw_binary.rs  iter_from_column_raw_i32.rs  iter_from_column_raw_i64.rs  iter_from_column_raw_series.rs  iter_from_column_raw_str.rs  mod.rs
polars-rows-iter/src/testing/: mod.rs  test_data_generators.rs  test_macros.rs
polars-rows-iter/tests/: .gitignore  column_name_transformation.rs  impl.rs  sandbox.rs
testing/: Cargo.toml
testing/src/: test_data_generators.rs  test_macros.rs
