[workspace]
resolver = "2"
members = ["polars-rows-iter", "polars-rows-iter-derive", "testing"]
exclude = ["benchmarks"]

[workspace.package]
version = "0.12.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/letkemann/polars-rows-iter"
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "dataframe", "rows", "iterator"]

[workspace.dependencies]
polars-rows-iter-derive = { version = "=0.12.1", path = "polars-rows-iter-derive" }
testing = { path = "./testing" }
polars = "0.52.0"
chrono = "0.4.42"
rand = "0.9.2"
itertools = "0.14.0"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = "2.0.111"
deluxe = "0.5.0"
convert_case = "0.11.0"
prettyplease = "0.2"
