[workspace]
resolver = "2"
members = ["polars-rows-iter", "polars-rows-iter-derive"]
exclude = ["benchmarks"]

[workspace.package]
version = "0.13.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/letkemann/polars-rows-iter"
description = "Library for easy and convenient row iteration of polars dataframes"
keywords = ["polars", "dataframe", "rows", "iterator"]

[workspace.dependencies]
polars-rows-iter-derive = { version = "=0.13.1", path = "polars-rows-iter-derive" }
polars = ">= 0.53"
chrono = "0.4"
rand = "0.10"
itertools = "0.14"
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
deluxe = "0.5"
convert_case = "0.11"
prettyplease = "0.2"
