[package]
name = "polars-rows-iter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
polars.workspace = true
polars-rows-iter-derive = { path = "../polars-rows-iter-derive" }

[features]
default = []
dtype-categorical = ["polars/dtype-categorical"]
