[package]
name = "testing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[dependencies]
polars = { workspace = true, features = ["dtype-full"] }
itertools.workspace = true
rand.workspace = true
